Added workshops/team page

--- a/assets/css/homeStyles.css
+++ b/assets/css/homeStyles.css
@@ -9,7 +9,8 @@ body, html {
 	-webkit-font-smoothing: antialiased;
 	-o-font-smoothing: antialiased;
 	font-smoothing: antialiased;
-	font-family: 'Lalezar', cursive;
+	font-family: 'Raleway', sans-serif;
+	/*font-family: 'Lalezar', cursive;*/
 }
 
 a {
@@ -43,10 +44,6 @@ a {
 	margin-right: 30px;
 	position: relative;
   top: 18px;
-	/*top: 50%;
-	-webkit-transform: translateY(-50%);
-	-moz-transform: translateY(-50%);
-	transform: translateY(-50%);*/
 }
 
 p {
@@ -74,92 +71,48 @@ p {
 	text-align:center;
 }
 
-div.gallery {
-    /*margin: 5px;*/
-		display: inline-block;
-		margin: 30px;
-    border: 1px solid #ccc;
-    /*float: left;*/
-    width: 200px;
-		height: 200px;
-		position: relative;
-}
-/*
-div.gallery:hover {
-    border: 1px solid #777;
-}*/
-
-div.gallery img {
-    width: 100%;
-    vertical-align: top;
-}
-/*
-div.gallery:after {
-    content: '\A';
-    position: absolute;
-		z-index: 1;
-    width: 100%; height:100%;
-    top:0; left:0;
-    background:rgb(248,248,255, 0.9);
-    opacity: 0;
-    transition: all 0.5s;
-    -webkit-transition: all 0.5s;
+/*https://www.w3schools.com/howto/howto_css_image_overlay.asp*/
+/*How to do slide in overlay*/
+.img-container {
+	display: inline-block;
+	position: relative;
+	width: 200px;
+	height: 200px;
+	margin: 25px;
 }
 
-div.gallery:hover:after {
-    opacity: 1;
+.image {
+	width: 100%;
+	height: auto;
 }
 
-div.gallery:after {
-    content: attr(data-content);
-    color: #000;
-		top: 50%;
-		/*position: relative;
-		top: 50%;
-		-webkit-transform: translateY(-50%);*/
-/*}*/
-
-.gallery:after, .gallery:before {
-    position: absolute;
-    opacity: 0;
-    transition: all 0.5s;
-    -webkit-transition: all 0.5s;
-}
-.gallery:after {
-    content: '\A';
-    width: 100%; height:100%;
-    top: 0; left:0;
-    background:rgb(248,248,255, 0.9);
-		/*rgb(248,248,255, 0.9)*/
-		/*rgb(245,245,245, 0.9)*/
-		 	/*rgb(255,250,250, 0.9)*/
+.overlay {
+  position: absolute;
+  bottom: 100%;
+  left: 0;
+  right: 0;
+	background-color: rgb(248,248,255, 0.9);
+  overflow: hidden;
+  width: 100%;
+  height:0;
+  transition: .5s ease;
 }
 
-.gallery:before {
-    content: attr(data-content);
-    width: 100%;
-    color: #000;
-    z-index: 1;
-    text-align: center;
-		/*position: relative;*/
-		top: 50%;
-		-webkit-transform: translateY(-50%);
-}
-
-.gallery:hover:after, .gallery:hover:before {
-    opacity: 1;
+.img-container:hover .overlay {
+  bottom: 0;
+  height: 100%;
 }
 
 .text {
-	position: absolute;
-	font-size: 36px;
-	color: black;
-	font-weight: 700;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translateX(-50%) translateY(-50%);
-    -moz-transform: translateX(-50%) translateY(-50%);
-   	transform: translateX(-50%) translateY(-50%);
+  white-space: nowrap;
+  color: black;
+  font-size: 20px;
+  position: absolute;
+  overflow: hidden;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
 }
 
 /* https://css-tricks.com/pointer-events-current-nav/ */
